change the subtitle in login-logado

--- a/src/views/login-logado.ejs
+++ b/src/views/login-logado.ejs
@@ -10,7 +10,7 @@
     <div class="col-lg-8 my-3">
       <%- include('includes/messages');%>
         <h1 class="text-center">Olá, <%= user.email%></h1>
-        <p class="text-center lead">Crie um novo contato na aba "Cadastrar contato"</p>
+        <p class="text-center lead">Crie um novo contato na aba "Cadastrar contato" ou clique em agenda para ver seus contatos</p>
 
 
       
